updated js quiz logic that set attribute for scores from display flex, to display block. This prevented quiz box from jumping to the right after save score was clicked. Additionally updated readme file. Also added a screenshot to repository to add back into readme.

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,8 @@ header {
 }
 
 .questions{
-    display: none;
+    visibility: visible;
+    display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
@@ -40,9 +41,24 @@ header {
 }
 
 .scoreOverlay{
-    display: none;
+    display: flex;
     position: absolute;
     background: blue;
     height: 100%;
-    width: 100%;
+    width: 60%;
 }
+
+.scorewrapper{
+    padding-left: 50px;
+}
+
+.highScore{
+    margin-left: 150px;
+}
+
+
+
+.answerButton:hover{
+    transform: scale(0.85);
+}
+
